deployment/kube/extractor/extractor-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: extractor
spec:
  selector:
    matchLabels:
      app: extractor
  replicas: 1
  template:
    metadata:
      labels:
        app: extractor
        role: extractor
    spec:
      securityContext:
        runAsUser: 997
        runAsGroup: 23
      hostIPC: True
      containers:
        - name: extractor
          image: adarshzededa/cdi-extractor:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 400Mi
          ports:
            - containerPort: 50000
            - containerPort: 50011
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 50000
            periodSeconds: 1
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 50000
            initialDelaySeconds: 10
            periodSeconds: 60
          volumeMounts:
            - name: conf
              mountPath: /etc/config/
              readOnly: false
      volumes:
        - name: conf
          configMap:
            name: cdi-config
            defaultMode: 0755
