deployment/kube/extractor/extractor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: extractor-service
  labels:
    app: extractor
spec:
  clusterIP: None
  ports:
    - protocol: "TCP"
      port: 50000
      targetPort: 50000
      name: extractor-rest
    - protocol: "TCP"
      port: 50011
      targetPort: 50011
      name: extractor-rpc
  selector:
    app: extractor
