deployment/kube/extractor/extractor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: extractor-ingress
  annotations:
    # Use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: cdi
      http:
        paths:
          - path: /extractor(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: extractor-service
                port:
                  number: 50000
          - path: /orchestrator(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: workflow-controller-service
                port:
                  number: 5002
